# mllm-human-simulation-eval

./: .gitignore  README.md  main.py  pyproject.toml  requirements-local.txt  requirements.txt
analysis/: fig_2.py  fig_3.py  fig_4.py  fig_5.py  fig_5_6.py  fig_6.py  fig_7.py  figures.py  paper_figures.ipynb  profile_ablation.py
analysis/additional_experiments/: exp_video_features.py
analysis/figs/: fig_2.py  fig_3.py  fig_4.py  fig_5.py  tab_1.py
data/: msv_df.csv  msv_df_by_participant.csv
data/results/: gemini_cot.csv  gemini_few_shot.csv  gemini_no_profile.csv  gemini_shuffled.csv  gemini_shuffled_run_2.csv  gemini_shuffled_run_3.csv  gemini_zero_shot.csv  qwen_cot.csv  qwen_few_shot.csv  qwen_no_profile.csv  qwen_shuffled_run_1.csv  qwen_shuffled_run_2.csv  qwen_shuffled_run_3.csv  qwen_zero_shot.csv
src/multimodal_pmsv_synth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pmsv_synth/: config.py
src/pmsv_synth/data/: export.py  sampler.py
src/pmsv_synth/inference/: sync.py
src/pmsv_synth/inference/gemini/: __init__.py  batch.py  gemini.py  sync.py
src/pmsv_synth/inference/qwen3_local/: __init__.py  model.py  sync.py
src/pmsv_synth/inference/qwen_local/: __init__.py  model.py  sync.py
src/pmsv_synth/prompts/: cot.py  cot_no_profile.py  few_shot.py  prompts.md  zero_shot.py  zero_shot_no_profile.py
