[project]
name = "multimodal-pmsv-synth"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.52.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
